--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spigot</title>
+    <title>Spigot Design</title>
     <script src="https://kit.fontawesome.com/0bf52e4844.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -144,7 +144,7 @@
                         <h2>So I Gave Accessible a Try...</h2>
                     </a>
                     <p>
-                        It's time to talk a bit about accessibility on the web. It's been…
+                        It's time to talk a bit about accessibility on the web. It's been...
                     </p>
                 </div>
             </div>
